[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0",features = ["postgres","r2d2"] }
dotenv = "0.15"
chrono = "0.2.25"
common = { path = "../common"}
tokio = { version = "1.17.0", features = ["full"] }
actix-web = "4.0.0-rc.1"
yew = { version = "0.20.0", features = ["csr"] }
